--- a/install_apache.yml
+++ b/install_apache.yml
@@ -6,7 +6,11 @@
   tasks:
   - name: install Apache Webserver
     apt: name=apache2 state=latest
-
-
+    register: command_output
+    
   - name: Start Apache and Enable it on the every boot
     service: name=apache2 state=started enabled=yes
+    register: command_output
+ 
+  - debug:
+     var: command_output.stdout_lines
