--- a/install_apache.yml
+++ b/install_apache.yml
@@ -12,5 +12,4 @@
     service: name=apache2 state=started enabled=yes
     register: command_output
  
-  - debug:
-     var: command_output.stdout_lines
+  - debug: var=command_output.stdout_lines
