--- a/install_apache.yml
+++ b/install_apache.yml
@@ -10,6 +10,6 @@
     
   - name: Start Apache and Enable it on the every boot
     service: name=apache2 state=started enabled=yes
-    register: command_output
+    register: comm_output
  
-  - debug: var=command_output.stdout_lines
+  - debug: var=comm_output.stdout_lines
