--- a/install_apache.yml
+++ b/install_apache.yml
@@ -6,10 +6,12 @@
   tasks:
   - name: install Apache Webserver
     apt: name=apache2 state=latest
-    register: command_output
+    register: my_output
+    
+  - debug: var=my_output.stdout_lines
     
   - name: Start Apache and Enable it on the every boot
     service: name=apache2 state=started enabled=yes
-    register: my_output
+    register: my_output2
 
-  - debug: var=my_output.stdout_lines
+  - debug: var=my_output2.stdout_lines
