--- a/install_apache.yml
+++ b/install_apache.yml
@@ -9,11 +9,11 @@
     register: my_output
     
   - debug:
-      var: my_output.output
+      var: my_output
     
   - name: Start Apache and Enable it on the every boot
     service: name=apache2 state=started enabled=yes
     register: my_output2
 
   - debug: 
-      var: my_output2.output
+      var: my_output2
