--- a/programu_versijos.yml
+++ b/programu_versijos.yml
@@ -1,6 +1,7 @@
----
-- name: Programu_versijos
+- name: programu_versijos
+  hosts: all
+  become: yes
   package_facts:
-- name: Parodyti programu versijas
-  debug:
-    var: ansible_facts.packages
+  - name: Parodyti programu versijas
+    debug:
+      var: ansible_facts.packages
