--- a/programu_versijos_ubuntu.yml
+++ b/programu_versijos_ubuntu.yml
@@ -5,7 +5,7 @@
 
   tasks:
   - name: Get packages
-    shell: dpkg-query -f '${binary:Package}\n' -W
+    shell: dpkg-query -W '${binary:Package}\n' -W
     register: packages
 
   - name: Print packages
